hamburger added and body centered

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li><a href="#">Categories</a></li>
           </ul>
         </div>
+        <button class="hamburger"></button>
       </nav>
     </head>
     The Bright Future of Web 3.0? We dive into the next evolution of the web
