--- a/index.html
+++ b/index.html
@@ -46,17 +46,61 @@
         <button class="hamburger"></button>
       </nav>
     </head>
-    The Bright Future of Web 3.0? We dive into the next evolution of the web
-    that claims to put the power of the platforms back into the hands of the
-    people. But is it really fulfilling its promise? Read more New Hydrogen VS
-    Electric Cars Will hydrogen-fueled cars ever catch up to EVs? The Downsides
-    of AI Artistry What are the possible adverse effects of on-demand AI image
-    generation? Is VC Funding Drying Up? Private funding by VC firms is down 50%
-    YOY. We take a look at what that means. 01 Reviving Retro PCs What happens
-    when old PCs are given modern upgrades? 02 Top 10 Laptops of 2022 Our best
-    picks for various needs and budgets. 03 The Growth of Gaming How the
-    pandemic has sparked fresh opportunities.
 
+    <main>
+      <section class="hero">
+        <img
+          id="hero-image"
+          src="./assets/images/image-web-3-desktop.jpg"
+          alt="hero image"
+        />
+        <h1>The Bright Future of Web 3.0?</h1>
+        <div>
+          <p>
+            We dive into the next evolution of the web that claims to put the
+            power of the platforms back into the hands of the people. But is it
+            really fulfilling its promise?
+          </p>
+          <button>Read more</button>
+        </div>
+      </section>
+      <div class="side">
+        <h2>New</h2>
+        <section class="s-one">
+          <h3>Hydrogen VS Electric Cars</h3>
+          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        </section>
+        <section class="s-two">
+          <h3>The Downsides of AI Artistry</h3>
+          <p>
+            WThe Downsides of AI Artistry What are the possible adverse effects
+            of on-demand AI image generation?
+          </p>
+        </section>
+        <section class="s-three">
+          <h3>Is VC Funding Drying Up?</h3>
+          <p>
+            Private funding by VC firms is down 50% YOY. We take a look at what
+            that means.
+          </p>
+        </section>
+      </div>
+      <section class="o-one">
+        <h2>01</h2>
+        <h3>Reviving Retro PCs</h3>
+        <p class="one">What happens when old PCs are given modern upgrades?</p>
+      </section>
+      <section class="o-two">
+        <h2>02</h2>
+        <h3>Top 10 Laptops of 2022</h3>
+        <p class="two">Our best picks for various needs and budgets.</p>
+      </section>
+      <section class="o-three">
+        <h2>03</h2>
+        <h3>he Growth of Gaming</h3>
+        <p class="three">T How the pandemic has sparked fresh opportunities.</p>
+      </section>
+    </main>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
