imgs added to sub news

--- a/index.html
+++ b/index.html
@@ -85,20 +85,33 @@
           </p>
         </section>
       </div>
-      <section class="o-one">
-        <h2>01</h2>
-        <h3>Reviving Retro PCs</h3>
-        <p class="one">What happens when old PCs are given modern upgrades?</p>
+      <section class="o o-one">
+        <img src="./assets/images/image-retro-pcs.jpg" alt="" />
+        <div class="o-content">
+          <h2>01</h2>
+          <h3>Reviving Retro PCs</h3>
+          <p class="one">
+            What happens when old PCs are given modern upgrades?
+          </p>
+        </div>
       </section>
-      <section class="o-two">
-        <h2>02</h2>
-        <h3>Top 10 Laptops of 2022</h3>
-        <p class="two">Our best picks for various needs and budgets.</p>
+      <section class="o o-two">
+        <img src="./assets/images/image-top-laptops.jpg" alt="" />
+        <div class="o-content">
+          <h2>02</h2>
+          <h3>Top 10 Laptops of 2022</h3>
+          <p class="two">Our best picks for various needs and budgets.</p>
+        </div>
       </section>
-      <section class="o-three">
-        <h2>03</h2>
-        <h3>he Growth of Gaming</h3>
-        <p class="three">T How the pandemic has sparked fresh opportunities.</p>
+      <section class="o o-three">
+        <img src="./assets/images/image-gaming-growth.jpg" alt="" />
+        <div class="o-content">
+          <h2>03</h2>
+          <h3>he Growth of Gaming</h3>
+          <p class="three">
+            T How the pandemic has sparked fresh opportunities.
+          </p>
+        </div>
       </section>
     </main>
     <div class="attribution">
