side bar styling

--- a/index.html
+++ b/index.html
@@ -64,18 +64,21 @@
           <button>Read more</button>
         </div>
       </section>
+
       <div class="side">
         <h2>New</h2>
         <section class="s-one">
           <h3>Hydrogen VS Electric Cars</h3>
           <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          <div class="seperator"></div>
         </section>
         <section class="s-two">
           <h3>The Downsides of AI Artistry</h3>
           <p>
-            WThe Downsides of AI Artistry What are the possible adverse effects
-            of on-demand AI image generation?
+            What are the possible adverse effects of on-demand AI image
+            generation?
           </p>
+          <div class="seperator"></div>
         </section>
         <section class="s-three">
           <h3>Is VC Funding Drying Up?</h3>
@@ -83,6 +86,7 @@
             Private funding by VC firms is down 50% YOY. We take a look at what
             that means.
           </p>
+          <!-- <div class="seperator"></div> -->
         </section>
       </div>
       <section class="o o-one">
