--- a/index.html
+++ b/index.html
@@ -111,10 +111,8 @@
         <img src="./assets/images/image-gaming-growth.jpg" alt="" />
         <div class="o-content">
           <h2>03</h2>
-          <h3>he Growth of Gaming</h3>
-          <p class="three">
-            T How the pandemic has sparked fresh opportunities.
-          </p>
+          <h3>The Growth of Gaming</h3>
+          <p class="three">How the pandemic has sparked fresh opportunities.</p>
         </div>
       </section>
     </main>
